# eCos-old

./: README.host
host/tools/configtool/standalone/wxwin/: COPYING  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
host/tools/configtool/standalone/wxwin/autom4te.cache/: output.0  output.1  output.4  requests  traces.0  traces.2  traces.3  traces.4
